Arreglando fugas de memoria y uso excesivo de hilos